making the code cleaner

--- a/code/index.html
+++ b/code/index.html
@@ -120,9 +120,9 @@
   </div>
 </div>
 <footer>
-   </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a></p>
+   </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> 
+   Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a>
+  </p>
 </footer>
 </body>
 </html>
-
-
