making the code cleaner

--- a/code/index.html
+++ b/code/index.html
@@ -30,6 +30,8 @@
         </nav>
     </header>
 <!-- image that separates the header and the content -->
+<!-- I consider this to be an element that separates the header (logo+nav bar) 
+rather than part of the header because I meant it to only display on desktop view. -->
     <img src="bg-header.jpg" alt="header and content seperation image" class="header-break-img">
   <!-- The big news content -->
   <div class="news-container">
