--- a/code/index.html
+++ b/code/index.html
@@ -4,11 +4,20 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="widht=devide-widht", initial-scale="1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="navbar">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#inspiration">Inspiration</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <br>
+        <img src="habitat-logo.png" alt="picture of habitat-logo">
+      </div>
     </header>
 
     <section class="big-news">
