--- a/code/index.html
+++ b/code/index.html
@@ -5,20 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400&family=Playfair+Display:wght@500&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c7081c8e9b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="main-header">
+        <div class="main-header--logo">
+          <img src="./logo-nd.svg" alt="logo neighbour daily"/>
+          <h1><span>neighbour</span> daily</h1>
+        </div>
+        <div class="nav-hamburger"><i class="fas fa-bars fa-3x"></i></div>
+      </div>
+      <nav class="sub-header">
+        <ul>
+          <li>news</li>
+          <li>schedule</li>
+          <li>blogs</li>
+          <li>contact</li>
+        </ul>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <main>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+      <section class="big-news">
+        <!-- The big news content -->
+      </section>
+      
+      <section class="">
+        <!-- The other news  -->
+      </section>
+    </main>
+    </body>
+    </html>
+    
