added the first styling

--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,18 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
       <nav class="top-nav">
-        <ul class="menu-list">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Videos</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-
-        <div class="logo">
+        <a class="logo" href="#">
           <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\5525786492665856.jpg" alt="dino-logo">
-        </div>
+        </a>
+        <a href="#">Videos</a>
+        <a href="#">Blog</a>
+
+        <input typ="text" placeholder="Search">
       </nav>
       <!-- Some kind of logo and navbar + search -->
     </header>
