added additional design

--- a/code/index.html
+++ b/code/index.html
@@ -41,90 +41,97 @@ rather than part of the header because I meant it to only display on desktop vie
       <h2>Koh Samui re-added to Sandbox Program</h2>
       <hr>
           <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
-          Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".           <a href="#" class="read-more">Read more</a>
-          </p>
+          Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui". 
+        </p>
+        <a href="#" class="read-more">Read more</a>
+        <div class="social-logos">
+          <a href="#"><img src="facebook-icon.svg" alt="facebook" ></a>
+          <a href="#"><img src="instagram-icon.svg" alt="instagram"></a>
+          <a href="#"><img src="twitter-icon.svg" alt="twitter"></a>
+          <a href="#"><img src="email-icon.svg" alt="email"></a>
+       </div>
     </div>    
   </section>
   <!-- The other news  -->
-  <div class="other-news-wrapper">
-  <section class="other-news">
+  <section class="other-news-wrapper">
+   <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-1.jpg" alt="chinese new year paper burning">
-          <h3>PM2.5 worsen during Chinese New Year</h3>
         </div>
+          <h3>PM2.5 worsen during Chinese New Year</h3>
             <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey.
               <a href="#" class="read-more">Read more</a>
             </p>
-    </section>
-    <section class="other-news">
+      </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-2.jpg" alt="electric cables wiring on pole">
-          <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
         </div>
+          <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
             <p class="other-news-content">Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).
               <a href="#" class="read-more">Read more</a>
             </p>
-    </section>
-    <section class="other-news">
+      </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-3.jpg" alt="paddle boats in bangkok">
-        <h3>Social distancing in water</h3>
       </div>
+        <h3>Social distancing in water</h3>
           <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.
             <a href="#" class="read-more">Read more</a>
           </p>
-    </section>
-    <section class="other-news">
+     </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-4.jpg" alt="bangkok chinatown at night">
-        <h3>Bangkok nightlife without tourists</h3>
       </div>
+        <h3>Bangkok nightlife without tourists</h3>
           <p class="other-news-content">2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.
             <a href="#" class="read-more">Read more</a>
           </p>
-    </section>
-    <section class="other-news">
+     </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-5.jpg" alt="pakced bts train">
-      <h3>City trains are for rich people</h3>
     </div>
+      <h3>City trains are for rich people</h3>
         <p class="other-news-content">Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.
           <a href="#" class="read-more">Read more</a>
         </p>
-    </section>
-    <section class="other-news">
+      </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-6.jpg" alt="street newspaper stall">
-      <h3>Newspapers are dying</h3>
     </div>
+      <h3>Newspapers are dying</h3>
         <p class="other-news-content">With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.
           <a href="#" class="read-more">Read more</a>
         </p>
-    </section>
-    <section class="other-news">
+      </article>
+    <article class="other-news">
       <div class="other-news-img">
        <img src="other-news-7.jpg" alt="rainy day at night in bangkok">
-      <h3>Monsoon arrives too soon</h3>
     </div>
+     <h3>Monsoon arrives too soon</h3>
         <p class="other-news-content">Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.
           <a href="#" class="read-more">Read more</a>
         </p>
-    </section>
-    <section class="other-news">
+      </article>
+    <article class="other-news">
       <div class="other-news-img">
         <img src="other-news-8.jpg" alt="bangkok bts station">
-      <h3>Confusion around Thailand Pass</h3>
     </div>
+      <h3>Confusion around Thailand Pass</h3>
         <p class="other-news-content"> There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.
           <a href="#" class="read-more">Read more</a>
         </p>
+      </article>
     </section>
   </div>
-</div>
-<footer>
-   </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> 
-   Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a>
-  </p>
-</footer>
+  <footer>
+     </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> 
+     Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a>
+     </p>
+  </footer>
 </body>
 </html>
