CSS mobile completed

--- a/code/index.html
+++ b/code/index.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
-      <div class="branding-mobile">
+      <div class="branding">
         <span class="branding-logo"></span>
         <h1 class="branding-title">THE BOOK MAGAZINE</h1>
       </div>
@@ -50,19 +50,92 @@
         <h4 class="popular-title">Popular articles</h4>
         <div class="popular-divider"></div>
       </div>
-      <article class="popular-card">
-        <img
-          src="./assets/article-sub-sample.jpg"
-          alt="sample"
-          class="card-img"
-        />
-        <div class="card-description">
-          <h3 class="card-title">
-            New homeowners surprised to find cat in cupboard
-          </h3>
-          <p class="card-date">January 17, 11: 30 AM</p>
-        </div>
-      </article>
+      <div class="popular-card-container">
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+        <!-- article sample -->
+        <article class="popular-card">
+          <img
+            src="./assets/article-sub-sample.jpg"
+            alt="sample"
+            class="card-img"
+          />
+          <div class="card-description">
+            <h3 class="card-title">
+              New homeowners surprised to find cat in cupboard
+            </h3>
+            <p class="card-date">January 17, 11: 30 AM</p>
+          </div>
+        </article>
+      </div>
     </section>
   </body>
 </html>
