CSS tablet completed

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
         alt="bookstore"
       />
       <div class="big-news-description">
-        <p class="description-data">January 17, 11: 30 AM</p>
+        <p class="description-date">January 17, 11: 30 AM</p>
         <h2 class="description-title">
           Veganism: Would having a vegan pet help save the planet?
         </h2>
