CSS responsive desktop completed

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,26 @@
         <span class="branding-logo"></span>
         <h1 class="branding-title">THE BOOK MAGAZINE</h1>
       </div>
+      <nav class="nav">
+        <a class="nav-menu" href="#">HOME</a>
+        <a class="nav-menu" href="#">NEWS</a>
+        <a class="nav-menu" href="#">STORIES</a>
+        <a class="nav-menu" href="#">CONTACT</a>
+      </nav>
     </header>
+    <div class="header-tablet">
+      <!-- Some kind of logo and navbar -->
+      <nav class="nav-tablet">
+        <a class="nav-menu" href="#">HOME</a>
+        <a class="nav-menu" href="#">NEWS</a>
+        <div class="branding">
+          <span class="branding-logo"></span>
+          <h1 class="branding-title">THE BOOK MAGAZINE</h1>
+        </div>
+        <a class="nav-menu" href="#">STORIES</a>
+        <a class="nav-menu" href="#">CONTACT</a>
+      </nav>
+    </div>
 
     <section class="big-news">
       <!-- The big news content -->
