--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Her money</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
+
+    <!-- Logo and navbar -->
     <header>
-      <!-- Some kind of logo and navbar -->
+     <section class="navbar">
+       <div class="logo">
+        <img src="" alt="Logo">
+       </div>
+       <div class="navbar-item-1">
+        <button>Click</button>
+       </div>
+       <div class="navbar-item-2">
+         <button>Click</button>
+        </div>
+       <div class="navbar-item-3">
+         <button>Click</button>
+        </div>
+        <div class="navbar-item-4">
+          <button>Click</button>
+         </div>
+
+     </section> 
     </header>
 
     <section class="big-news">
