addded html and css files

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,115 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel News</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    
+      <!-- Logo and navbar --> 
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <header> 
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+ 
+  <img class="logo" src="Logo1.jpeg" alt="logo"> 
+   <h1 class="headertext">Travel News</h1> 
+  
+
+    <nav> 
+    <div> 
+      <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">ABOUT</a> 
+      <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">READ</a> 
+    </div> 
+    <div> 
+      <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">WRITE</a> 
+      <a href="https://www.thesitemagazine.com/thesitemagazine" target="_blank">BUY</a> 
+      </div> 
+    </nav> 
+
+</header> 
+ 
+ <!-- The big news  --> 
+
+
+ <!-- <div class="flex-parent1">  -->
+
+  <div class="child1"> 
+    <img class="image" src="https://images.pexels.com/photos/346705/pexels-photo-346705.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image1" /> 
+ </div> 
+  
+ <div class="child2"> 
+  <h3 class="header-box">TRAVEL</h3> 
+  <p class="text">Tourism is travelling for pleasure or to enjoy yourself away from the place you live. People do 
+    this for many different reasons – to have fun, visit other countries and learn about other cultures or just relax from 
+    stressful working life. Tourists go to various destinations - countries with great landmarks, places with lovely 
+    beaches or simply areas of wilderness and untouched nature. In the last few decades tourism has grown very much, 
+    mostly because people’s lifestyles have changed. They don’t want to stay at home any more. They spend more money 
+    on travelling than previous generations did. Travelling has also become cheaper and more affordable. The rise of 
+    budget airlines has made it possible to afford trips to faraway countries. .</p> 
+  </div> 
+
+</div>  
+
+<!-- The other news  --> 
+
+<div class="flex-parent2"> 
+
+<div class="flex-child 3"> <a href="https://www.thesitemagazine.com/call-for-submissions"> 
+<img class="image" src="https://images.pexels.com/photos/7412075/pexels-photo-7412075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image2"> 
+<div class="date">Jan 15 2022</div> 
+<div class="footer-text"> Studio Gang's "Actionable Idealism"</div> 
+    </a> 
+  </div> 
+
+  <div class="flex-child 4"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+    <img class="image" src="https://images.pexels.com/photos/7412075/pexels-photo-7412075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"  alt="image3"> 
+    <div class="date">Jan 13 2022</div> 
+    <div class="footer-text"> Black Healing in the Digital Space</div> 
+  </a> 
+</div> 
+
+<div class="flex-child 5"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+  <img class="image" src="https://images.pexels.com/photos/4125993/pexels-photo-4125993.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image4"> 
+  <div class="date">Jan 12 2022</div> 
+  <div class="footer-text"> Between Form and Formlessness</div> 
+</a> 
+</div>
+
+<div class="flex-child 6"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+  <img class="image" src="https://images.pexels.com/photos/8285167/pexels-photo-8285167.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="image5" /> 
+  <div class="date">Jan 10 2022</div> 
+  <div class="footer-text">Umwelten: The Animal People</div> 
+</a> 
+</div> 
+
+<div class="flex-child 7"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+  <img class="image" src="https://images.pexels.com/photos/2533092/pexels-photo-2533092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"alt="image6" /> 
+  <div class="date">Jan 8 2022</div> 
+  <div class="footer-text">Drawing Non-Conforming </div> 
+</a> 
+</div> 
+
+<div class="flex-child 8"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+  <img class="image" src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"  alt="bike" /> 
+  <div class="date">Jan 5 2022</div> 
+  <div class="footer-text">Memorials</div> 
+</a> 
+</div> 
+
+
+<div class="flex-child 9"><a href="https://www.thesitemagazine.com/call-for-submissions"> 
+  <img class="image" src="https://images.pexels.com/photos/305832/pexels-photo-305832.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="House" /> 
+  <div class="date">Jan 3 2022</div> 
+  <div class="footer-text">Between Form and Formlessness</div> 
+</a> 
+</div> 
+
+  
+
+</div> 
+
+
+</body> 
 </html>
