add responsive  main content

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- header with logo and navbar -->
       <div class="main-header">
         <div class="main-header--logo">
           <img class="logo" src="./logo-nd.svg" alt="logo neighbour daily"/>
@@ -32,14 +32,53 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main-container">
 
       <section class="big-news">
         <!-- The big news content -->
+        <img class="big-news--img" src="./images/laundry.jpg" alt="laundry basket"/>
+        <div big-news--card>
+          <h2>Trouble in laundry room <span>- Gunhilds nightmare came true</span></h2>
+          <p>Every week since 1984, Gunhild has used the laundry room monday mornings 7 a.m to wash her curtains. Last monday someone stole Gunhilds laundry time so she couldn´t wash. The guilty has been found and..</p>
+          <button type="button">-> read more</button>
+        </div>
       </section>
       
-      <section class="">
+      <section class="news-feed">
+
         <!-- The other news  -->
+        <div class="news-feed--card">
+          <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
+          <div news-feed--card>
+          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <button class="news-feed--button" type="button">...</button>
+          </div>
+        </div>
+
+        <div class="news-feed--card">
+          <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
+          <div news-feed--card>
+          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <button class="news-feed--button" type="button">...</button>
+          </div>
+        </div>
+
+        <div class="news-feed--card">
+          <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
+          <div news-feed--card>
+          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <button class="news-feed--button" type="button">...</button>
+          </div>
+        </div>
+
+        <div class="news-feed--card">
+          <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
+          <div news-feed--card>
+          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <button class="news-feed--button" type="button">...</button>
+          </div>
+        </div>
+
       </section>
     </main>
     </body>
