add text content and max-width

--- a/code/index.html
+++ b/code/index.html
@@ -49,7 +49,7 @@
         <!-- The other news  -->
         <div class="news-feed--card">
           <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
-          <div news-feed--card>
+          <div news-feed--btn>
           <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
           <button class="news-feed--button" type="button">...</button>
           </div>
@@ -57,24 +57,24 @@
 
         <div class="news-feed--card">
           <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
-          <div news-feed--card>
-          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <div news-feed--btn>
+          <p>Anonymous neighbour wonder if Sören really needed to use his car so often? We must think of our generations to come..</p>
           <button class="news-feed--button" type="button">...</button>
           </div>
         </div>
 
         <div class="news-feed--card">
           <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
-          <div news-feed--card>
-          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <div news-feed--btn>
+          <p>Hildur won last weeks cross word competition.</p>
           <button class="news-feed--button" type="button">...</button>
           </div>
         </div>
 
         <div class="news-feed--card">
           <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
-          <div news-feed--card>
-          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+          <p>PRO is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
+          <div news-feed--btn>
           <button class="news-feed--button" type="button">...</button>
           </div>
         </div>
