added a white background, a logo and h1, started a grid navbar,made  margin 0 in css of body, and added a CSS background image.

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,16 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+    <section class="navigation-bar">
+
+    <img src="https://images.unsplash.com/photo-1573752040309-f4960b47735a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" 
+    alt="matchtrixnews-logo"
+    class="matchtrixnews-logo"/>
+    
+    <h1 class="site-name">Match Trix News</h1>
+
+    </section> 
+    
     </header>
 
     <section class="big-news">
