restructuring of css file and rearranging of layout

--- a/code/index.html
+++ b/code/index.html
@@ -37,7 +37,7 @@
       <section class="big-news">
         <!-- The big news content -->
         <img class="big-news--img" src="./images/laundry.jpg" alt="laundry basket"/>
-        <div big-news--card>
+        <div class="big-news--card">
           <h2>Trouble in laundry room <span>- Gunhilds nightmare came true</span></h2>
           <p>Every week since 1984, Gunhild has used the laundry room monday mornings 7 a.m to wash her curtains. Last monday someone stole Gunhilds laundry time so she couldn´t wash. The guilty has been found and..</p>
           <button type="button">-> read more</button>
@@ -48,35 +48,35 @@
 
         <!-- The other news  -->
         <div class="news-feed--card">
-          <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
-          <div news-feed--btn>
-          <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
-          <button class="news-feed--button" type="button">...</button>
+          <div class="news-feed--btn">
+            <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
+            <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
           </div>
+          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
-          <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
-          <div news-feed--btn>
-          <p>Anonymous neighbour wonder if Sören really needed to use his car so often? We must think of our generations to come..</p>
-          <button class="news-feed--button" type="button">...</button>
+          <div class="news-feed--btn">
+            <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
+            <p>Anonymous neighbour wonder if Sören really needed to use his car so often? We must think of our generations to come..</p>
           </div>
+          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
-          <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
-          <div news-feed--btn>
-          <p>Hildur won last weeks cross word competition.</p>
-          <button class="news-feed--button" type="button">...</button>
+          <div class="news-feed--btn">
+            <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
+            <p>Hildur won last weeks cross word competition.</p>
           </div>
+          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
-          <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
-          <p>PRO is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
-          <div news-feed--btn>
-          <button class="news-feed--button" type="button">...</button>
+          <div class="news-feed--btn">
+            <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
+            <p>PRO is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
           </div>
+          <button class="news-feed--button" type="button">...</button>
         </div>
 
       </section>
