Lagt över den kod jag gjort

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -9,14 +15,53 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img src="/images/fox.png" width="80px" alt="" class="logga">
+      <nav>
+          <a href=""><p>Popular</p></a>
+          <a href=""><p>Latest News</p></a>
+          <a href=""><p>Bevakningar</p></a>
+          <a href=""><p>Animals</p></a>
+          </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+        <div class="part1">
+          <img src="/images/animals.jpg" width=500px" alt="">
+      </div>
+      <div class="part2">
+          <h2>THE BIG ANIMAL FAMILY</h2>
+          <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+          </div>
+      </div>
     </section>
 
-    <section class="">
+    <section class="cards">
       <!-- The other news  -->
+      <div class="card1">
+        <img src="/images/fox.png" width="150px" alt="">
+    </div>
+    <div class="card2">
+        <img src="/images/cow.png" width="150px" alt="">
+    </div>
+    <div class="card3">
+        <img src="/images/coala.png" width="150px" alt="">
+    </div>
+    <div class="card4">
+        <img src="/images/pig.png" width="150px" alt="">
+    </div>
+    <div class="card5">
+        <img src="/images/tigers.png" width="150px" alt="">
+    </div>
+    <div class="card6">
+        <img src="/images/bear.png" width="150px" alt="">
+    </div>
+    <div class="card7">
+        <img src="/images/lama.png" width="150px" alt="">
+    </div>
+    <div class="card8">
+        <img src="/images/lion.png" width="150px" alt="">
+    </div>
     </section>
   </body>
 </html>
