added basic structure

--- a/code/index.html
+++ b/code/index.html
@@ -5,18 +5,43 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="logo">
+      <img src="logo.svg" alt="">
+      <h1 class="hidden">Daily News</h1>
+    </div>
+      <!--start nav bar-->
+      <nav class="menu">
+        <ul class="menupartOne">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+      <ul class="menupartTwo">
+          <li><a href="#">Sports</a></li>
+          <li><a href="#contact">Contact</a></li>
+      </ul>
+  </nav>
+    <!--end nav bar-->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div>
+        <img src="/img/carjonhall.jpeg" alt="Bigimage" width="600" height="400">
+      </div>
+      <div>big text</div>
     </section>
 
-    <section class="">
+    <section class="mainText">
       <!-- The other news  -->
+      <div>hello1</div>
+      <div>hello2</div>
+      <div>hello3</div>
+      <div>hello4</div>
     </section>
+    
   </body>
 </html>
