added nav bar boxes

--- a/code/index.html
+++ b/code/index.html
@@ -3,24 +3,67 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Long+Cang&family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-        <nav class="nav-bar">
-            <h1 class="logo">News of today</h1>
-                <ol>
-                    <a href="">About</a>
-                    <a href="">More</a>
-                    <a href="">Contact</a>
-                </ol>
-        </nav>
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class="container">
+
+          <header>
+            <nav>
+              <input type="checkbox" id="check">
+              <img class="menu-button" src="/icons/bars-solid.svg" alt="menu"> 
+              <label for="check" class="checkbtn"></label>
+                <label class="logo">ARTifice</label>
+                    <ul>
+                      <li><a class="active" href="#">Home</a></li>
+                      <li><a href="#">Design</a></li>
+                      <li><a href="#">Art</a></li>
+                      <li> <a href="https://arkitekten.se/">Architecture</a></li>
+                      <li><a href="#">Travel</a></li>
+                      <li><a href="#">Contact</a></li>
+                  </ul>
+            </nav>
+        </header>
+
+          <div class="big-news">
+            <img>
+            <h1>BIG PICTURE WITH TEXT BOX ON</h1>
+          </div>
+
+          <div class="second-news">
+            <img>
+            <h1>Other pic news with story box on the side </h1>
+          </div>
+
+          <div class="text-second-news">
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+              ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+              Duis aute irure dolor in reprehenderit in voluptate velit 
+            </p>
+          </div>
+
+
+
+
+
+        
+
+
+
+      </section>
+
+    <!-- <section class="big-news">
+      <!-- The big news content
+      <article class="main">
+        <img src="./images/katsuma-tanaka-Dakbfhj51eE-unsplash.jpg" alt="Picture of desert">
+      </article>
+    </section> -->
 
     <section class="">
       <!-- The other news  -->
